Fix car page mobile Safari spacing

--- a/front/src/app/scss/blocks/sections/_single-section.scss
+++ b/front/src/app/scss/blocks/sections/_single-section.scss
@@ -188,7 +188,8 @@
     }
 
     @include tablet {
-      grid-template-columns: 100%;
+      display: flex;
+      flex-direction: column;
       gap: 30px;
     }
 
@@ -210,6 +211,7 @@
       display: flex;
       flex-direction: column;
       gap: 30px;
+      margin-bottom: 0;
       position: relative;
       padding: 14px 16px 16px;
       border-radius: 22px;
